# micos-2024

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  README.md  RELEASENOTES.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-docs.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-version.yml  gh-pages-cleanup.yml  pages.yml  release.yml
changelog/: 2025-10-20_open_source_refactor.md  CHANGELOG.md  CHANGELOG.zh.md  README.md
config/: databases.yaml.template
docs/: ARCHIVED.md  GITHUB_PAGES_SETUP.md  README.md  index.md
docs/en/: api-reference.md  configuration.md  diversity-analysis.md  faq.md  functional-profiling.md  index.md  installation.md  taxonomic-profiling.md  troubleshooting.md
docs/includes/: abbreviations.md
docs/overrides/: 404.html  home.html  main.html
docs/overrides/javascripts/: extra.js
docs/overrides/stylesheets/: extra.css
docs/zh/: api-reference.md  configuration.md  diversity-analysis.md  faq.md  functional-profiling.md  index.md  installation.md  taxonomic-profiling.md  troubleshooting.md  user_manual.md
micos/: __init__.py  cli.py  full_run.py  summarize_results.py  utils.py
openspec/: README.md
openspec/adr/: 0001-record-architecture.md  0002-module-merge-strategy.md  0003-dependency-version-pinning.md  0004-cicd-simplification.md  0005-bilingual-docs-strategy.md  template.md
openspec/changes/: template.md
openspec/specs/: analysis-pipeline.md  configuration-schema.md  container-strategy.md
scripts/: README.md  check_project_status.sh  download_databases.sh  enhanced_qc.py  metatranscriptome_analysis.py  network_analysis.py  run_full_analysis.sh  run_module.sh  summarize_results.py
steps/01_quality_control/: docker-compose.yaml
tests/: test_cli.py  test_full_run.py  test_shell_wrappers.py  test_summarize_results.py  test_utils.py
workflows/wdl_scripts/: humann3.wdl  origin-HUMAnN.wdl
